--- a/FlaskApp/templates/main.html
+++ b/FlaskApp/templates/main.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/static/favicon.ico">
 
-    <title>AWS Developer: Building on AWS</title>
+    <title>OrthoDocs Demo</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -30,11 +30,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">My Project</a>
+            <a class="navbar-brand" href="#">OrthoDocs Demo</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="/">home</a>
+              <li><a href="/">Home</a>
             </ul>
             <ul class="nav navbar-nav navbar-right">
 
